# gpd_ros

./: CMakeLists.txt  package.xml
include/gpd_ros/: grasp_detection_node.h  grasp_detection_server.h  grasp_messages.h  grasp_plotter.h
msg/: CloudIndexed.msg  CloudSamples.msg  CloudSources.msg  GraspConfigList.msg  SamplesMsg.msg
src/gpd_ros/: grasp_messages.cpp
